--- a/css/menu.css
+++ b/css/menu.css
@@ -555,7 +555,7 @@ position: relative;
     margin: 0px;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1{
 
    padding: 30px;
   
@@ -570,7 +570,7 @@ position: relative;
    border-radius: 5px;
    
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .msg{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg{
 
     position:absolute;
     right: 50px;
@@ -578,11 +578,11 @@ position: relative;
     cursor: pointer;
  
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .msg i{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg i{
     color:var(--cor_sub_bloco);
     font-size: 1.1em;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .msg p{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg p{
     display: none;
     width: 170px;
     background-color: #0F111A;
@@ -590,56 +590,56 @@ position: relative;
     border-radius: 10px;
     padding: 10px;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .group-input{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .group-input{
     display: block;
  
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 input, select{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 input, select{
     display: block;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 input:focus{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 input:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 select:focus{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 select:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 label{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 label{
    
     
     
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .acao .title{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .title{
     margin-bottom: 10px;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .acao hr{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  hr{
     color: rgb(188, 188, 188);
     margin-top: 0px;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1 .acao .title label{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .title label{
     color: black;
 
     margin: 0px;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1  .group-btn{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .group-btn{
    
     float: right;
     margin-top: 20px;
     width: 100%;
     
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-1  .group-btn button{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .group-btn button{
     margin: 5px;
 }
 
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2{
     margin: 20px;
     background-color: white;
     padding: 20px;
@@ -648,32 +648,32 @@ position: relative;
     -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body{
     overflow: auto;
     max-height: 300px;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body .card_acess{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body .card_acess{
     margin: 5px;
     padding: 3px;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body .card_acess p{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body .card_acess p{
     margin: 0px;
 font-size: 0.9em;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body ul li ul li{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body ul li ul li{
     display: flex;
     align-items: center;
 
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body ul li ul li p{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body ul li ul li p{
 
 margin:0px;
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .card .card-body ul li ul li a{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .card .card-body ul li ul li a{
     float: right;
     font-size: 0.9em;
 
 }
-.bloco .bloco-right .bloco-pesquisa_config .bloco-pesquisa-2 .tabela{
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .tabela{
     overflow: auto;
 }
