--- a/css/menu.css
+++ b/css/menu.css
@@ -24,6 +24,10 @@ input{
     --cor_sub_bloco:#141824;
 }
 
+.row{
+    --bs-gutter-x: 0rem;
+    --bs-gutter-y: 0;
+}
 /*computador*/
 @media screen and (min-width:1000px){
     .bloco .bloco-left{
@@ -479,6 +483,11 @@ position: relative;
 
 
 }
+.bloco .bloco-right .bloco-pesquisa .bloco-pesquisa-1 .row{
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+}
+
 .bloco .bloco-right .bloco-pesquisa .bloco-pesquisa-1 .input-pesquisa{
     border: 1px solid rgb(179, 179, 179);
     width: fit-content;
@@ -560,7 +569,7 @@ position: relative;
    padding: 30px;
   
 
-
+    position: relative;
    align-items: center;
    -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
@@ -570,17 +579,25 @@ position: relative;
    border-radius: 5px;
    
 }
+
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .btn_ativo{
+    background-color:var(--cor_principal);
+    color: white;
+}
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg{
 
     position:absolute;
-    right: 50px;
-    z-index: 5px;
+    right: 30px;
+    z-index: 5;
+    top: 20px;
     cursor: pointer;
+
+
  
 }
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg i{
     color:var(--cor_sub_bloco);
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg p{
     display: none;
@@ -589,6 +606,8 @@ position: relative;
     color: white;
     border-radius: 10px;
     padding: 10px;
+    font-size: 1.0em;
+
 }
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .group-input{
     display: block;
@@ -615,7 +634,8 @@ position: relative;
 }
 
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .title{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+ 
 }
 
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  hr{
