--- a/css/menu.css
+++ b/css/menu.css
@@ -446,6 +446,14 @@ font-size: 1.3em;
 	display: block;
 
 } */
+.bloco .bloco-right .btn_notificacao {
+  padding: 5px;
+}
+
+.bloco .bloco-right .btn_notificacao i{
+   color: white;
+   font-size: 1.1em;
+}
 
 .bloco .bloco-right .topo .right #seta_dropdown{
     color: white;
@@ -453,11 +461,12 @@ font-size: 1.3em;
     cursor: pointer;
  
 }
-.bloco .bloco-right .topo .user{
- 
+.bloco .bloco-right .topo #dropdown_user{
+ display: flex;
+ flex-wrap: wrap;
    
 }
-.bloco .bloco-right .topo .user p{
+.bloco .bloco-right .topo nav .user p{
     color: white;
     margin: 0px;
     padding: 0px;
