--- a/css/menu.css
+++ b/css/menu.css
@@ -13,6 +13,7 @@ p{
 input{
     outline: none;
 }
+
 :root {
 	--cor_principal: #131520;
     --borda_princiapl:#40475e;
@@ -586,18 +587,55 @@ font-size: 1.3em;
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+
+.bloco-pesquisa-1 form::-webkit-scrollbar {
+    width: 10px;               /* width of the entire scrollbar */
+}
+
+.bloco-pesquisa-1 form::-webkit-scrollbar-track {
+    /* color of the tracking area */
+    border: 2px solid #131520;
+    border-radius: 20px;   
+}
+.bloco-pesquisa-1 form::-webkit-scrollbar-thumb {
+    background: #051827;   /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thumb */
+}
+
+
+
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 form .card-tarefa{
     background: rgb(249,249,249);
     background: -moz-linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
     background: -webkit-linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
     background: linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f9f9f9",endColorstr="#fbfbfb",GradientType=1);
+    border-radius: 10px;
+    border: 0px;
+    transition: 0.2s ease-in-out;
 }
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 form .card-tarefa .card-body{
+    border-radius: 10px;
+    border: 0px;
+}
+
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 form .card-tarefa:hover{
+    -webkit-box-shadow: 7px 6px 15px -5px rgba(19,21,32,1);
+    -moz-box-shadow: 7px 6px 15px -5px rgba(19,21,32,1);
+    box-shadow: 7px 6px 15px -5px rgba(19,21,32,1);
+    border-radius: 10px;
+    border: 0px;
+}
+
 
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .btn_ativo{
     background-color:var(--cor_principal);
     color: white;
 }
+
+
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .msg{
     position:absolute;
     right: 30px;
@@ -643,17 +681,17 @@ font-size: 1.3em;
     
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .title{
+.bloco .bloco-right .bloco-pesquisa-menu .title{
     margin-bottom: 5px;
     width: fit-content;
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  hr{
+.bloco .bloco-right .bloco-pesquisa-menu  hr{
     color: rgb(188, 188, 188);
     margin-top: 0px;
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .title label{
+.bloco .bloco-right .bloco-pesquisa-menu  .title label{
     color: white;
     margin: 0px;
     padding: 2px 10px 2px 10px;
@@ -665,17 +703,17 @@ font-size: 1.3em;
    -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1  .title label:hover{
+.bloco .bloco-right .bloco-pesquisa-menu   .title label:hover{
     transform: translateX(5px);
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .title .msg_title{
+.bloco .bloco-right .bloco-pesquisa-menu .title .msg_title{
     display: none;
     opacity: 0;
     transition: 0.5s ease-in-out;
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .title:hover .msg_title{
+.bloco .bloco-right .bloco-pesquisa-menu .title:hover .msg_title{
     display:block;
     position: absolute;
     padding: 5px;
@@ -687,7 +725,7 @@ font-size: 1.3em;
     opacity: 0.8;
 }
 
-.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .title:hover .msg_title p{
+.bloco .bloco-right .bloco-pesquisa-menu .title:hover .msg_title p{
     margin: 0px;
     font-size: 0.8em;
 }
