--- a/css/menu.css
+++ b/css/menu.css
@@ -11,9 +11,19 @@ p{
 }
 
 input{
-    outline: none;
+    outline: 0;
+
 }
 
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
 :root {
 	--cor_principal: #131520;
     --borda_princiapl:#40475e;
@@ -836,3 +846,12 @@ border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thum
 }
 
 
+
+.bloco .bloco-right .bloco-pesquisa-1 form  .d-area{
+    border-radius: 20px;
+    background: rgb(50,58,83);
+    background: -moz-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
+    background: -webkit-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
+    background: linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#323a53",endColorstr="#1b2c61",GradientType=1);
+}
