--- a/css/menu.css
+++ b/css/menu.css
@@ -759,6 +759,7 @@ font-size: 1.3em;
     -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+    position: relative;
 }
 .card .card-body::-webkit-scrollbar {
     width: 10px;               /* width of the entire scrollbar */
@@ -847,11 +848,22 @@ border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thum
 
 
 
-.bloco .bloco-right .bloco-pesquisa-1 form  .d-area{
-    border-radius: 20px;
+.bloco .bloco-right  form .dv{
+
     background: rgb(50,58,83);
     background: -moz-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
     background: -webkit-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
     background: linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#323a53",endColorstr="#1b2c61",GradientType=1);
+}
+
+.img_alert_pesquisa{
+  
+    width: 300px;
+    margin: 0 auto;
+}
+.img_alert_pesquisa p {
+    text-align: center;
+    font-weight: 600;
+    color: #7d7d7d;
 }
