--- a/css/menu.css
+++ b/css/menu.css
@@ -40,6 +40,11 @@ input[type=number] {
     --bs-gutter-y: 0;
 }
 
+.custom-input:focus {
+    outline: none;
+    background-color: #03303d;
+  }
+
 @keyframes opacity {
     0% {
         opacity: 0;
@@ -761,6 +766,27 @@ font-size: 1.3em;
     margin: 5px;
 }
 
+.bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 .tabela{
+    overflow: auto;
+}
+
+
+.bloco-pesquisa-1 .tabela::-webkit-scrollbar {
+    width: 10px;               /* width of the entire scrollbar */
+    }
+    
+    .bloco-pesquisa-1 .tabela::-webkit-scrollbar-track {
+    /* color of the tracking area */
+    border: 2px solid #131520;
+    border-radius: 20px;   
+    }
+    .bloco-pesquisa-1 .tabela::-webkit-scrollbar-thumb {
+    background: #051827;   /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    
+    }
+    
+
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2{
     margin: 20px;
     background-color: white;
@@ -817,6 +843,7 @@ margin:0px;
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .table{
     overflow: auto;
 }
+
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-2 .tabela{
     overflow: auto;
     max-height: 550px;
@@ -858,10 +885,7 @@ border-radius: 20px;       /* roundness of the scroll thumb */
 border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thumb */
 }
 
-
-
 .bloco .bloco-right  form .dv{
-
     background: rgb(50,58,83);
     background: -moz-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
     background: -webkit-linear-gradient(90deg, rgba(50,58,83,1) 3%, rgba(27,44,97,1) 60%);
@@ -870,12 +894,24 @@ border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thum
 }
 
 .img_alert_pesquisa{
-  
     width: 300px;
     margin: 0 auto;
 }
+
 .img_alert_pesquisa p {
     text-align: center;
     font-weight: 600;
     color: #7d7d7d;
+}
+
+.sobre{
+    margin: 100px auto;
+}
+.sobre  p{
+    margin: 0px;
+    color: #7d7d7d;
+    font-size: 0.9em;
+}
+.sobre img{
+    width: 50%;
 }
