--- a/css/menu.css
+++ b/css/menu.css
@@ -243,14 +243,12 @@ input[type=number] {
 }
 .bloco .bloco-left .categoria nav ul ul li{
     padding: 2px;
-
 }
 
 .bloco .bloco-left .categoria nav ul ul li:hover{
     border-left: 2px solid white;
 }
 .bloco .bloco-left .categoria nav ul ul li a{
-
 	padding: 0px;
 	font-weight:500;
     padding: 7px;
@@ -260,10 +258,12 @@ input[type=number] {
     text-decoration: none;
 }
 .bloco .bloco-left .categoria nav ul ul li a:hover{
-    margin-left: 5px;
+   transform:translateX(2px);
+   transition: 0.2s ease-in-out;
+   color: white;
 }
 .bloco .bloco-left .categoria nav ul ul li a:hover{
-	color: var(--yellow);
+	
 }
 .bloco .bloco-left .categoria nav  ul li:hover ul{
 	display: block;
@@ -632,11 +632,7 @@ font-size: 1.3em;
 
 
 .bloco .bloco-right .bloco-pesquisa-menu .bloco-pesquisa-1 form .card-tarefa{
-    background: rgb(249,249,249);
-    background: -moz-linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
-    background: -webkit-linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
-    background: linear-gradient(90deg, rgba(249,249,249,1) 3%, rgba(251,251,251,1) 60%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f9f9f9",endColorstr="#fbfbfb",GradientType=1);
+    background-image: radial-gradient(circle at 43.84% -20.44%, #f1f1f4 0, #f1f1f4 50%, #f1f1f4 100%);
     border-radius: 10px;
     border: 0px;
     transition: 0.2s ease-in-out;
