--- a/css/menu.css
+++ b/css/menu.css
@@ -163,6 +163,10 @@ form .form-control{
 
 }
 
+table td{
+    font-size: 0.9em;
+}
+
 .bloco{
    
     display: flex;
@@ -941,4 +945,18 @@ border: 3px solid var(--borda_princiapl);  /* creates padding around scroll thum
     top: 50%;
     left: 50%;
     display: none;
+}
+.status_caixa{
+
+    max-height: 400px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.status_caixa_card .img_status{
+    max-height: 300px;
+    
+    margin: 0px;
 }
